--- a/templates/lobby.hbs
+++ b/templates/lobby.hbs
@@ -8,27 +8,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300&family=Mulish:ital@0;1&display=swap" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/lobby.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='lobby.css'>
 </head>
 <body>
 
     <header id="nav">
        <div class="nav--list">
-            <a href="lobby.html">
+            <a href="/lobby">
                 <h3 id="logo">
-                    <img src="./images/logo.png" alt="Site Logo">
+                    <img src="hello1.png" alt="Site Logo">
                     
                 </h3>
             </a>
        </div>
 
         <div id="nav__links">
-            <a class="nav__link" href="/">
-                Lobby
+            <a class="nav__link" href="/home">
+                Go back to dashboard
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ede0e0" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h7v-5h4v5h7v-10h3zm-5 8h-3v-5h-8v5h-3v-10.26l7-6.912 7 6.99v10.182z"/></svg>
             </a>
-            <a class="nav__link" id="create__room__btn" href="lobby.html">
+            <a class="nav__link" id="create__room__btn" href="/lobby">
                 Create Room
                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ede0e0" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 13h-5v5h-2v-5h-5v-2h5v-5h2v5h5v2z"/></svg>
             </a>
@@ -65,5 +65,5 @@
      </main>
     
 </body>
-<script type="text/javascript" src="js/lobby.js"></script>
+<script type="text/javascript" src="lobby.js"></script>
 </html>
